style: update title to 部活動(運動) and add category buttons

--- a/club.html
+++ b/club.html
@@ -97,7 +97,13 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <div style="display: flex; gap: 15px; justify-content: center; margin-bottom: 20px;">
+                <a href="club.html#sports"
+                    style="display: inline-block; padding: 10px 40px; background-color: #333; color: white; text-decoration: none; border-radius: 30px; font-weight: bold; font-size: 1.1em; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">運動部</a>
+                <a href="club.html#culture"
+                    style="display: inline-block; padding: 10px 40px; background-color: #fff; color: #333; text-decoration: none; border-radius: 30px; font-weight: bold; font-size: 1.1em; border: 2px solid #333; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">文化部</a>
+            </div>
+            <h1 id="sports">部活動(運動)</h1>
             <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
