content: update consultation title and remove image placeholder

--- a/consultation.html
+++ b/consultation.html
@@ -151,16 +151,12 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
+            <h1>個別相談</h1>
             <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
         </div>
     </header>
 
     <main class="container">
-
-        <section class="consult-section">
-            <div style="width: 100%; max-width: 1200px; height: 400px; background-color: #ddd; display: flex; align-items: center; justify-content: center; margin: 0 auto 40px auto; border-radius: 8px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); color: #666; font-size: 1.5em; font-weight: bold;">📸 笑顔の先生や、明るい校舎</div>
-        </section>
 
         <!-- こんな方は、個別相談がおすすめ -->
         <section class="consult-section">
