content: refine consultation wording and fix hub H1 titles/placeholders

--- a/consultation.html
+++ b/consultation.html
@@ -160,14 +160,14 @@
 
         <!-- こんな方は、個別相談がおすすめ -->
         <section class="consult-section">
-            <h2 class="consult-title">🚩 こんな方は、個別相談がおすすめ</h2>
+            <h2 class="consult-title">こんな方は、個別相談をご検討ください</h2>
             <div style="background-color: #f2f2f2; padding: 30px; border-radius: 8px;">
                 <ul class="consult-list"
                     style="color: #333; font-weight: bold; list-style-type: disc; padding-left: 20px;">
-                    <li>霞ヶ浦高校の雰囲気を直接知りたい！</li>
-                    <li>どのコースが自分に合っているか相談したい。</li>
-                    <li>部活動と勉強、両立できるか不安…。</li>
-                    <li>入試のポイントや、合格の目安を知りたい！</li>
+                    <li>霞ヶ浦高等学校の雰囲気を直接知りたい方</li>
+                    <li>ご自身に合ったコースについて相談したい方</li>
+                    <li>部活動と学習の両立について不安がある方</li>
+                    <li>入試のポイントや合格の目安を知りたい方</li>
                 </ul>
             </div>
         </section>
@@ -176,7 +176,7 @@
 
         <!-- よくある相談内容 -->
         <section class="consult-section">
-            <h2 class="consult-title">よくある相談内容（先輩たちもこんなことを聞きました！）</h2>
+            <h2 class="consult-title">よくある相談内容</h2>
 
             <div class="qa-box">
                 <p class="qa-q">「特進コースと総合進学コース、どっちが合ってる？」</p>
@@ -198,14 +198,14 @@
 
         <!-- 当日の流れ -->
         <section class="consult-section">
-            <h2 class="consult-title">当日の流れ（タイムスケジュール）</h2>
-            <p style="margin-bottom: 20px; font-size: 1.1em;">相談時間は、<strong>1組あたり約20〜30分程度</strong>です。</p>
+            <h2 class="consult-title">当日の流れ</h2>
+            <p style="margin-bottom: 20px; font-size: 1.1em;">相談時間は、<strong>1組あたり約20〜30分程度</strong>となります。</p>
 
             <ol style="line-height: 1.8; font-size: 1.1em; padding-left: 20px;">
-                <li style="margin-bottom: 10px;"><strong>受付：</strong> 事務局前で受付を済ませます。</li>
-                <li style="margin-bottom: 10px;"><strong>個別相談：</strong> 担当の先生と1対1（保護者同席可）でお話しします。</li>
-                <li style="margin-bottom: 10px;"><strong>校内見学（希望者のみ）：</strong> 放課後の校内の様子を見ることも可能です！</li>
-                <li style="margin-bottom: 10px;"><strong>終了：</strong> そのまま解散となります。お疲れ様でした！</li>
+                <li style="margin-bottom: 10px;"><strong>受付：</strong> 事務局前で受付をお願いいたします。</li>
+                <li style="margin-bottom: 10px;"><strong>個別相談：</strong> 担当教員と1対1（保護者同席可）でご相談をお受けします。</li>
+                <li style="margin-bottom: 10px;"><strong>校内見学（希望者のみ）：</strong> 放課後の校内の様子をご覧いただけます。</li>
+                <li style="margin-bottom: 10px;"><strong>終了：</strong> 個別相談終了後、随時解散となります。</li>
             </ol>
         </section>
 
@@ -213,8 +213,8 @@
 
         <!-- 開催日程 -->
         <section class="consult-section">
-            <h2 class="consult-title">📅 開催日程</h2>
-            <p style="text-align: center; margin-bottom: 20px; font-size: 1.1em;">学校帰りにも立ち寄りやすい、夕方の時間帯に開催します。</p>
+            <h2 class="consult-title">開催日程</h2>
+            <p style="text-align: center; margin-bottom: 20px; font-size: 1.1em;">学校帰りにもお立ち寄りいただける夕方の時間帯に開催いたします。</p>
 
             <table class="schedule-table">
                 <tr>
@@ -240,11 +240,11 @@
 
         <!-- お申し込みはこちら -->
         <section class="consult-section" style="text-align: center;">
-            <h2 class="consult-title" style="text-align: left;">📝 お申し込みはこちら</h2>
-            <p style="margin-bottom: 30px; font-size: 1.1em;">お申し込みはWebから簡単に行えます！</p>
+            <h2 class="consult-title" style="text-align: left;">お申し込み方法</h2>
+            <p style="margin-bottom: 30px; font-size: 1.1em;">参加をご希望の方は、以下のWeb申し込みページよりご予約をお願いいたします。</p>
             <a href="#"
                 style="display: inline-block; background-color: #555; color: white; text-decoration: none; padding: 20px 50px; border-radius: 50px; font-size: 1.6em; font-weight: bold; box-shadow: 0 4px 6px rgba(0,0,0,0.2); transition: transform 0.2s;">
-                🚀 予約はこちら（Web申込サイトへ）
+                予約ページへ進む
             </a>
         </section>
 
@@ -252,18 +252,18 @@
 
         <!-- 会場とアクセス -->
         <section class="consult-section">
-            <h2 class="consult-title">📍 会場とアクセス</h2>
+            <h2 class="consult-title">会場・アクセス</h2>
 
             <ul style="list-style: none; padding: 0; margin-bottom: 30px; font-size: 1.1em; line-height: 1.8;">
                 <li><strong>会場：</strong> 霞ヶ浦高等学校（本校）</li>
                 <li><strong>住所：</strong> 茨城県稲敷郡阿見町阿見3984</li>
-                <li><strong>駐車場：</strong> 校内駐車場をご利用いただけます。お車での来校も安心です。</li>
+                <li><strong>駐車場：</strong> 校内駐車場をご利用いただけます。</li>
             </ul>
 
             <!-- Google Maps 埋め込み (ダミーのiframe) -->
             <div
                 style="width: 100%; height: 400px; background-color: #eee; border: 1px solid #ccc; display: flex; justify-content: center; align-items: center; color: #666;">
-                <span style="font-size: 1.5em; font-weight: bold;">🗺️ Googleマップを表示（ここにマップを埋め込み）</span>
+                <span style="font-size: 1.5em; font-weight: bold;">Googleマップを表示</span>
             </div>
         </section>
 
@@ -271,12 +271,13 @@
 
         <!-- 中学生のみなさんへ -->
         <section class="consult-section" style="background-color: #f2f2f2; padding: 40px; border-radius: 8px;">
-            <h2 class="consult-title" style="border-left-color: #333;">💡 中学生のみなさんへ</h2>
+            <h2 class="consult-title" style="border-left-color: #333;">中学生の皆様へ</h2>
             <p style="font-size: 1.1em; line-height: 1.8; margin-bottom: 20px;">
-                「個別相談」って聞くと少し緊張するかもしれませんが、面接試験ではないので安心してください！あなたの将来を応援するための場所です。私服でも制服でもOK。保護者の方と一緒でも、お一人でも大歓迎です。
+                個別相談は面接試験ではございませんので、どうぞリラックスしてご参加ください。皆様の進路選択をサポートする場として、お気軽にご活用いただけます。<br>
+                服装は制服・私服どちらでも構いません。保護者の方と同席でのご参加、または生徒様お一人でのご参加、いずれも歓迎いたします。
             </p>
             <p style="font-size: 1.2em; font-weight: bold; color: #333; margin: 0; text-align: center;">
-                霞ヶ浦高校で、あなたに会えるのを楽しみにしています！
+                皆様のご参加を心よりお待ち申し上げております。
             </p>
         </section>
 
