--- a/hub_alumni.html
+++ b/hub_alumni.html
@@ -148,8 +148,8 @@
             </div>
         </div>
         <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
-            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
+            <h1>卒業生の方へ</h1>
+            
         </div>
     </header>
 
