content: redesign top page layout based on wireframe request

--- a/index.html
+++ b/index.html
@@ -96,273 +96,61 @@
 
             </div>
         </div>
-        <div class="container" style="padding-top: 0;">
-            <h1>霞ヶ浦高等学校</h1>
-            <div class="main-hero-placeholder">ここに写真を入れるイメージ</div>
+    <div style="width: 100%; height: 600px; background-color: #e0e0e0; position: relative;">
+        <div class="container" style="height: 100%; position: relative;">
+            <div style="position: absolute; bottom: 80px; left: 20px;">
+                <h1 style="font-size: 2.5em; line-height: 1.4; color: #000; margin: 0;">テキストテキスト<br>テキストテキスト</h1>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
 
-    <main class="container">
+<main class="container" style="position: relative; margin-top: -50px; padding-bottom: 80px;">
+    
+    <!-- 4 Banners -->
+    <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-bottom: 80px;">
+        <a href="admission.html" style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
+            <p style="margin: 0 0 10px 0; font-size: 1.1em; font-weight: bold;">2026年</p>
+            <h2 style="margin: 0; font-size: 1.5em; font-weight: bold;">入試情報</h2>
+        </a>
+        <a href="school_life.html#daily_schedule" style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
+            <p style="margin: 0 0 10px 0; font-size: 0.9em; font-weight: bold;">高校生活が丸わかり<br>先輩の</p>
+            <h2 style="margin: 0; font-size: 1.3em; font-weight: bold;">1日のスケジュール</h2>
+        </a>
+        <a href="interview.html" style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
+            <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold;">卒業後どんな活躍してる？</p>
+            <h2 style="margin: 0; font-size: 1.5em; font-weight: bold;">卒業生に<br>インタビュー</h2>
+        </a>
+        <a href="consultation.html" style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
+            <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold;">「この学校、私に合うのかな？」</p>
+            <h2 style="margin: 0; font-size: 1.25em; font-weight: bold;">まずは、個別相談で<br>相談してみる</h2>
+        </a>
+    </div>
 
-        <!-- Welcome Section -->
-        <section class="welcome-section">
-            <h2 class="welcome-title"></h2>
-            <p class="welcome-text"></p>
-        </section>
+    <!-- 3 Hub Circles -->
+    <div style="display: flex; justify-content: center; gap: 80px; margin-bottom: 80px;">
+        <a href="hub_admission.html" style="text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center;">
+            <div style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;"></div>
+            <span style="font-weight: bold;">受験生の方へ</span>
+        </a>
+        <a href="hub_parents.html" style="text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center;">
+            <div style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;"></div>
+            <span style="font-weight: bold;">在校生・保護者の方へ</span>
+        </a>
+        <a href="hub_alumni.html" style="text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center;">
+            <div style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;"></div>
+            <span style="font-weight: bold;">卒業生の方へ</span>
+        </a>
+    </div>
 
-        <!-- Hierarchical Navigation Section -->
-        <section class="hierarchy-nav-section"
-            style="margin: 40px 0; padding: 30px; background-color: #fff; border-radius: 8px; border-top: 4px solid #333;">
-            <h2 style="font-size: 1.4em; margin-bottom: 25px; border-bottom: 1px solid #ddd; padding-bottom: 10px;">
-                サイトマップ（階層ナビゲーション）</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 30px;">
+    <!-- News Section -->
+    <section style="text-align: center; margin-bottom: 50px;">
+        <h2 style="font-size: 1.8em; margin-bottom: 30px;">お知らせ</h2>
+        <!-- News list could go here, for now it matches the wireframe -->
+    </section>
 
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="admission.html"
-                            style="color: #333; text-decoration: none; font-weight: bold;">受験生案内</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 学校案内・データブック</a></li>
-                        <li><a href="admission.html" style="color: #555; text-decoration: none;">├ 出願・入試関係書類</a></li>
-                        <li><a href="admission.html" style="color: #555; text-decoration: none;">└ 個別相談会・Q&A</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="course.html" style="color: #333; text-decoration: none; font-weight: bold;">コース紹介</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="course.html" style="color: #555; text-decoration: none;">├ 特進選抜コース</a></li>
-                        <li><a href="course.html" style="color: #555; text-decoration: none;">├ 特進コース</a></li>
-                        <li><a href="course.html" style="color: #555; text-decoration: none;">└ 総合進学コース</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="about.html" style="color: #333; text-decoration: none; font-weight: bold;">学校紹介</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="about.html" style="color: #555; text-decoration: none;">├ 校長挨拶・沿革</a></li>
-                        <li><a href="about.html" style="color: #555; text-decoration: none;">├ 施設・設備</a></li>
-                        <li><a href="about.html" style="color: #555; text-decoration: none;">└ アクセス</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="school_life.html"
-                            style="color: #333; text-decoration: none; font-weight: bold;">学校生活</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 年間行事</a></li>
-                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">├ 制服紹介</a></li>
-                        <li><a href="school_life.html" style="color: #555; text-decoration: none;">└ 一日の流れ</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="career.html" style="color: #333; text-decoration: none; font-weight: bold;">進路指導</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="career.html" style="color: #555; text-decoration: none;">├ 進路指導体制</a></li>
-                        <li><a href="career.html" style="color: #555; text-decoration: none;">├ 大学合格実績</a></li>
-                        <li><a href="interview.html" style="color: #555; text-decoration: none;">└ 卒業生の声</a></li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h4 style="margin-bottom: 12px; font-size: 1.1em; border-left: 3px solid #666; padding-left: 8px;">
-                        <a href="club.html" style="color: #333; text-decoration: none; font-weight: bold;">部活動</a>
-                    </h4>
-                    <ul style="list-style-type: none; padding-left: 11px; font-size: 0.95em; line-height: 1.8;">
-                        <li><a href="club.html" style="color: #555; text-decoration: none;">├ 運動部</a></li>
-                        <li><a href="club.html" style="color: #555; text-decoration: none;">├ 文化部</a></li>
-                        <li><a href="club.html" style="color: #555; text-decoration: none;">└ 主な戦績</a></li>
-                    </ul>
-                </div>
-
-            </div>
-        </section>
-
-        <!-- Target Audience Sections -->
-        <section class="audience-section">
-
-            <!-- For Prospective Students -->
-            <div class="audience-card-large">
-                <div class="card-image-wrapper">
-                    <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
-                </div>
-                <div class="card-content-wrapper">
-                    <h3 class="audience-title-large"></h3>
-                    <p class="audience-description"></p>
-
-                    <div class="highlight-links">
-                        <a href="#" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                        <a href="course.html" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                        <a href="school_life.html" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="more-links">
-                        <h4></h4>
-                        <div class="link-grid">
-                            <a href="about.html">学校紹介・沿革</a>
-                            <a href="about.html#facilities">施設設備</a>
-                            <a href="club.html">部活動紹介</a>
-                            <a href="career.html">進路実績</a>
-                            <a href="interview.html">卒業生の声</a>
-                            <a href="#">アクセス</a>
-                            <a href="#">よくある質問</a>
-                            <a href="#">お問い合わせ</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- For Current Students/Parents -->
-            <div class="audience-card-large">
-                <div class="card-image-wrapper">
-                    <div class="image-placeholder" style="height: 300px;">ここに写真を入れるイメージ</div>
-                </div>
-                <div class="card-content-wrapper">
-                    <h3 class="audience-title-large"></h3>
-                    <p class="audience-description"></p>
-
-                    <div class="highlight-links">
-                        <a href="school_life.html#annual-events" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                        <a href="career.html" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                        <a href="#" class="highlight-link-card">
-                            <div class="link-icon">■</div>
-                            <div class="link-content">
-                                <h4></h4>
-                                <p></p>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="more-links">
-                        <h4></h4>
-                        <div class="link-grid">
-                            <a href="course.html">コース紹介</a>
-                            <a href="club.html">部活動</a>
-                            <a href="about.html">学校紹介</a>
-                            <a href="#">お問い合わせ</a>
-                        </div>
-                        <!-- Large Card 1 -->
-                        <a href="hub_admission.html" class="audience-card-large"
-                            style="text-decoration: none; color: inherit;">
-                            <div class="card-image-wrapper">
-                                <div class="image-placeholder">ここに写真を入れるイメージ</div>
-                            </div>
-                            <div class="card-content-wrapper">
-                                <h3 class="audience-title-large">受験生の方へ</h3>
-                                <p class="audience-description">学校説明会や募集要項などの最新情報をご案内します。</p>
-                                <div class="link-highlight-box">
-                                    <span class="highlight-link">募集要項・出願 &rarr;</span>
-                                </div>
-                                <div class="sub-links">
-                                    <span>► オープンスクール</span>
-                                    <span>► 過去問題</span>
-                                    <span>► よくある質問</span>
-                                </div>
-                            </div>
-                        </a>
-
-                        <!-- Large Card 2 -->
-                        <a href="hub_parents.html" class="audience-card-large"
-                            style="text-decoration: none; color: inherit;">
-                            <div class="card-image-wrapper">
-                                <div class="image-placeholder">ここに写真を入れるイメージ</div>
-                            </div>
-                            <div class="card-content-wrapper">
-                                <h3 class="audience-title-large">在校生・保護者の方へ</h3>
-                                <p class="audience-description">学校生活や必要な手続き、お知らせなどをご確認いただけます。</p>
-                                <div class="link-highlight-box">
-                                    <span class="highlight-link">欠席連絡・お問い合わせ &rarr;</span>
-                                </div>
-                                <div class="sub-links">
-                                    <span>► 年間行事予定</span>
-                                    <span>► カフェテリアメニュー</span>
-                                    <span>► 各種証明書</span>
-                                </div>
-                            </div>
-                        </a>
-
-                        <!-- Bottom Row: Alumni and Teacher Recruitment -->
-                        <div class="bottom-cards-row">
-                            <!-- For Alumni -->
-                            <div class="audience-card-small">
-                                <div class="card-image-wrapper-small">
-                                    <div class="image-placeholder" style="height: 200px;">ここに写真を入れるイメージ</div>
-                                </div>
-                                <div class="card-content-wrapper-small">
-                                    <h3 class="audience-title-small"></h3>
-                                    <p class="audience-description-small"></p>
-
-                                    <div class="small-links">
-                                        <a href="#" class="small-link">▪ 卒業証明書申請</a>
-                                        <a href="#" class="small-link">▪ 成績証明書申請</a>
-                                        <a href="#" class="small-link">▪ 料金・支払い案内</a>
-                                        <a href="#" class="small-link">▪ お問い合わせ</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- For Teacher Recruitment -->
-                            <div class="audience-card-small">
-                                <div class="card-image-wrapper-small">
-                                    <div class="image-placeholder" style="height: 200px;">ここに写真を入れるイメージ</div>
-                                </div>
-                                <div class="card-content-wrapper-small">
-                                    <h3 class="audience-title-small"></h3>
-                                    <p class="audience-description-small"></p>
-
-                                    <div class="small-links">
-                                        <a href="#" class="small-link">▪ 採用案内（PDF）</a>
-                                        <a href="#" class="small-link">▪ お問い合わせ</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-        </section>
-
-    </main>
-
-    <footer>
+</main>
+<footer>
         <div class="container">
             <p>&copy; 2024 Kasumigaura High School</p>
         </div>
