content: add alumni interview card grid to bottom of top page

--- a/index.html
+++ b/index.html
@@ -307,7 +307,59 @@
             </div>
         </section>
 
-    </main>
+    
+    <!-- Voice of Alumni / Interviews Section -->
+    <section style="margin-top: 80px; margin-bottom: 80px;">
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 30px;">
+            
+            <!-- Card 1 -->
+            <div style="border: 1px solid #ddd; padding: 20px; background-color: #fff;">
+                <div style="width: 100%; height: 200px; background-color: #e0e0e0; display: flex; justify-content: center; align-items: center; border: 1px dashed #999; margin-bottom: 20px;">
+                    <span style="color: #666; font-weight: bold;">ここに写真を入れるイメージ</span>
+                </div>
+                <h3 style="font-size: 1.5em; margin: 0 0 15px 0;">茨城大学 合格</h3>
+                <hr style="border: none; border-top: 1px solid #ddd; margin-bottom: 15px;">
+                <p style="font-size: 0.95em; color: #333; margin-bottom: 20px;">明確な目標を立て、最後まで諦めずに努力しました。</p>
+                <a href="interview_detail.html" style="color: #333; text-decoration: underline; font-size: 0.9em;">インタビューを読む</a>
+            </div>
+
+            <!-- Card 2 -->
+            <div style="border: 1px solid #ddd; padding: 20px; background-color: #fff;">
+                <div style="width: 100%; height: 200px; background-color: #e0e0e0; display: flex; justify-content: center; align-items: center; border: 1px dashed #999; margin-bottom: 20px;">
+                    <span style="color: #666; font-weight: bold;">ここに写真を入れるイメージ</span>
+                </div>
+                <h3 style="font-size: 1.5em; margin: 0 0 15px 0;">〇〇大学 合格</h3>
+                <hr style="border: none; border-top: 1px solid #ddd; margin-bottom: 15px;">
+                <p style="font-size: 0.95em; color: #333; margin-bottom: 20px;">部活と両立しながら第一志望に合格することができました。</p>
+                <a href="interview_detail.html" style="color: #333; text-decoration: underline; font-size: 0.9em;">インタビューを読む</a>
+            </div>
+
+            <!-- Card 3 -->
+            <div style="border: 1px solid #ddd; padding: 20px; background-color: #fff;">
+                <div style="width: 100%; height: 200px; background-color: #e0e0e0; display: flex; justify-content: center; align-items: center; border: 1px dashed #999; margin-bottom: 20px;">
+                    <span style="color: #666; font-weight: bold;">ここに写真を入れるイメージ</span>
+                </div>
+                <h3 style="font-size: 1.5em; margin: 0 0 15px 0;">地元優良企業へ就職</h3>
+                <hr style="border: none; border-top: 1px solid #ddd; margin-bottom: 15px;">
+                <p style="font-size: 0.95em; color: #333; margin-bottom: 20px;">資格取得や面接対策など、手厚いサポートに感謝しています。</p>
+                <a href="interview_detail.html" style="color: #333; text-decoration: underline; font-size: 0.9em;">インタビューを読む</a>
+            </div>
+
+            <!-- Card 4 -->
+            <div style="border: 1px solid #ddd; padding: 20px; background-color: #fff;">
+                <div style="width: 100%; height: 200px; background-color: #e0e0e0; display: flex; justify-content: center; align-items: center; border: 1px dashed #999; margin-bottom: 20px;">
+                    <span style="color: #666; font-weight: bold;">ここに写真を入れるイメージ</span>
+                </div>
+                <h3 style="font-size: 1.5em; margin: 0 0 15px 0;">△△大学 合格</h3>
+                <hr style="border: none; border-top: 1px solid #ddd; margin-bottom: 15px;">
+                <p style="font-size: 0.95em; color: #333; margin-bottom: 20px;">先生方との距離が近く、気軽に相談できたのがよかったです。</p>
+                <a href="interview_detail.html" style="color: #333; text-decoration: underline; font-size: 0.9em;">インタビューを読む</a>
+            </div>
+
+        </div>
+    </section>
+
+</main>
     <footer>
         <div class="container">
             <p>&copy; 2024 Kasumigaura High School</p>
