style: force white text color on top page banners

--- a/index.html
+++ b/index.html
@@ -111,23 +111,23 @@
         <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 15px; margin-bottom: 80px;">
             <a href="admission.html"
                 style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
-                <p style="margin: 0 0 10px 0; font-size: 1.1em; font-weight: bold;">2026年</p>
-                <h2 style="margin: 0; font-size: 1.5em; font-weight: bold;">入試情報</h2>
+                <p style="margin: 0 0 10px 0; font-size: 1.1em; font-weight: bold; color: #fff;">2026年</p>
+                <h2 style="margin: 0; font-size: 1.5em; font-weight: bold; color: #fff;">入試情報</h2>
             </a>
             <a href="school_life.html#daily_schedule"
                 style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
-                <p style="margin: 0 0 10px 0; font-size: 0.9em; font-weight: bold;">高校生活が丸わかり<br>先輩の</p>
-                <h2 style="margin: 0; font-size: 1.3em; font-weight: bold;">1日のスケジュール</h2>
+                <p style="margin: 0 0 10px 0; font-size: 0.9em; font-weight: bold; color: #fff;">高校生活が丸わかり<br>先輩の</p>
+                <h2 style="margin: 0; font-size: 1.3em; font-weight: bold; color: #fff;">1日のスケジュール</h2>
             </a>
             <a href="interview.html"
                 style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
-                <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold;">卒業後どんな活躍してる？</p>
-                <h2 style="margin: 0; font-size: 1.5em; font-weight: bold;">卒業生に<br>インタビュー</h2>
+                <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold; color: #fff;">卒業後どんな活躍してる？</p>
+                <h2 style="margin: 0; font-size: 1.5em; font-weight: bold; color: #fff;">卒業生に<br>インタビュー</h2>
             </a>
             <a href="consultation.html"
                 style="background-color: #555; color: #fff; padding: 25px; text-decoration: none; display: flex; flex-direction: column; justify-content: center; height: 160px; transition: opacity 0.2s;">
-                <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold;">「この学校、私に合うのかな？」</p>
-                <h2 style="margin: 0; font-size: 1.25em; font-weight: bold;">まずは、個別相談で<br>相談してみる</h2>
+                <p style="margin: 0 0 10px 0; font-size: 0.85em; font-weight: bold; color: #fff;">「この学校、私に合うのかな？」</p>
+                <h2 style="margin: 0; font-size: 1.25em; font-weight: bold; color: #fff;">まずは、個別相談で<br>相談してみる</h2>
             </a>
         </div>
 
