--- a/index.html
+++ b/index.html
@@ -138,21 +138,21 @@
                 <div
                     style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;">
                 </div>
-                <span style="font-weight: bold;">受験生の方へ</span>
+                <span style="font-weight: bold; font-size: 1.2em;">受験生の方へ</span>
             </a>
             <a href="hub_parents.html"
                 style="text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center;">
                 <div
                     style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;">
                 </div>
-                <span style="font-weight: bold;">在校生・保護者の方へ</span>
+                <span style="font-weight: bold; font-size: 1.2em;">在校生・保護者の方へ</span>
             </a>
             <a href="hub_alumni.html"
                 style="text-decoration: none; color: #333; display: flex; flex-direction: column; align-items: center;">
                 <div
                     style="width: 100px; height: 100px; border-radius: 50%; background-color: #d9d9d9; margin-bottom: 15px;">
                 </div>
-                <span style="font-weight: bold;">卒業生の方へ</span>
+                <span style="font-weight: bold; font-size: 1.2em;">卒業生の方へ</span>
             </a>
         </div>
 
@@ -199,7 +199,7 @@
 
         <!-- School Features Section -->
         <section style="text-align: center; margin-bottom: 80px;">
-            <h2 style="font-size: 1.8em; margin-bottom: 30px;">学校の特色を<br>ここに書いていくのはいかがでしょうか？</h2>
+            <h2 style="font-size: 2.2em; margin-bottom: 30px;">学校の特色を<br>ここに書いていくのはいかがでしょうか？</h2>
             <p style="font-size: 1em; line-height: 1.8; color: #333;">
                 テキストテキストテキストテキストテキストテキスト<br>
                 テキストテキストテキストテキストテキストテキストテキスト<br>
