content: add daily schedule and annual schedule links to admission hub

--- a/hub_admission.html
+++ b/hub_admission.html
@@ -149,7 +149,7 @@
         </div>
         <div class="container" style="padding-top: 0;">
             <h1>受験生の方へ</h1>
-            
+
         </div>
     </header>
 
@@ -235,6 +235,22 @@
                     <div class="hub-content">
                         <div class="hub-title">学校生活</div>
                         <div class="hub-desc">年間行事、制服の紹介など、霞ヶ浦高等学校での充実した学校生活の様子をご紹介します。</div>
+                    </div>
+                </a>
+
+                <a href="school_life.html#daily_schedule" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">在校生の1日</div>
+                        <div class="hub-desc">霞ヶ浦高等学校の生徒たちがどのような1日を過ごしているか、タイムスケジュールでご紹介します。</div>
+                    </div>
+                </a>
+
+                <a href="school_life.html#annual_events" class="hub-card">
+                    <div class="hub-img" style="background-color: #eee; color: #333;">ここに写真を入れるイメージ</div>
+                    <div class="hub-content">
+                        <div class="hub-title">年間スケジュール</div>
+                        <div class="hub-desc">体育祭や文化祭、修学旅行など、1年を通して行われる様々な学校行事をご紹介します。</div>
                     </div>
                 </a>
 
